<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_guests">Todos Convidados</string>
    <string name="menu_present">Presentes</string>
    <string name="menu_absent">Ausentes</string>
    <string name="all_guests">Todos Convidados</string>
    <string name="guest_name">Nome\n</string>
    <string name="guest_presenca">Presença</string>
    <string name="lbl_confirmar">Confirmar</string>
</resources>