<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".view.GuestFormActivity">


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/guest_name"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/text_present"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/guest_presenca"
        />

    <RadioGroup
        android:id="@+id/rdg_present"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_present"
        >

        <RadioButton
            android:id="@+id/rdb_present"
            app:layout_constraintTop_toBottomOf="@id/text_present"
            app:layout_constraintStart_toStartOf="parent"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_present"
            />

        <RadioButton
            android:id="@+id/rdb_absent"
            app:layout_constraintTop_toBottomOf="@id/rdb_present"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_absent"
            />

    </RadioGroup>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rdg_present"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/lbl_confirmar"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>